UPDATE tictactoe project

--- a/index.html
+++ b/index.html
@@ -412,6 +412,32 @@
           <div class="project_box popElement">
             <div class="project_header">
               <div class="project_logo">
+                <img src="annexes/icons/icon_tictactoe.png" draggable="false" />
+              </div>
+              <div class="project_details">
+                <h3><strong>TicTacToe</strong></h3>
+                <div class="project_label">
+                  <span>Android</span>
+                  <span>Kotlin</span>
+                </div>
+              </div>
+            </div>
+            <div class="project_desc">
+              <p>
+                Application mobile Android du jeu du morpion.
+                Défiez vos amis ou jouez en solo en affrontant une intelligence artificielle impitoyable prête à vous battre à chaque coup
+              </p>
+            </div>
+            <div class="project_more">
+              <a href="tictactoe.html">Voir plus</a>
+            </div>
+          </div>
+        </div>
+
+        <div id="hidden_project" class="project_container">
+          <div class="project_box popElement">
+            <div class="project_header">
+              <div class="project_logo">
                 <img src="annexes/icons/icon_todolist.png" draggable="false" />
               </div>
               <div class="project_details">
@@ -459,34 +485,6 @@
             </div>
             <div class="project_more">
               <a href="cookie_clicker.html">Voir plus</a>
-            </div>
-          </div>
-        </div>
-
-        <div id="hidden_project" class="project_container">
-          <div class="project_box popElement">
-            <div class="project_header">
-              <div class="project_logo">
-                <img src="annexes/icons/icon_tictactoe.png" draggable="false" />
-              </div>
-              <div class="project_details">
-                <h3><strong>TicTacToe (en cours)</strong></h3>
-                <div class="project_label">
-                  <span>Android</span>
-                  <span>Kotlin</span>
-                </div>
-              </div>
-            </div>
-            <div class="project_desc">
-              <p>
-                Application mobile Android qui reprend le jeu du morpion. Cette
-                application vous permet d'affronter vos amis sur votre téléphone
-                mais si vous êtes seul vous pouvez alors vous confronter à une
-                Intelligence Artificiel qui ne vous laissera aucune chance !
-              </p>
-            </div>
-            <div class="project_more disabled">
-              <a href="#">Voir plus</a>
             </div>
           </div>
         </div>
