--- a/tictactoe.html
+++ b/tictactoe.html
@@ -48,19 +48,30 @@
                 <div class="smartphone">
                     <div class="content">
                         <video controls loop autoplay muted width="300px" height="550px">
-                            <source src="" type="video/mp4" />
+                            <source src="annexes/records/tictactoe_recording.mp4" type="video/mp4" />
                         </video>
                     </div>
                 </div>
             </div>
             <div class="project_content_smartphone_text">
                 <p>
-                    J'ai réalisé ce projet sur mon temps libre.
-                    Mon objectif était de reprendre le jeu du morpion mais sur support mobile.
+                    Ce jeu reprend le jeu du morpion. Cependant, j'ai souhaité y intégrer l'algorithme minimax que j'ai abordé lors du cours d'intelligence artificielle en master.
                 </p>
+
                 <p>
-                    Après avoir suivi le cours d'Intelligence Artificielle lors de ma 1<sup>re</sup> année de Master, j'ai souhaité mettre en place un algorithme vu en cours.
-                    J'ai alors repris cet algorithme (min-max) pour qu'on puisse jouer contre l'IA.
+                    Pour rester dans le thème du jeu, j'ai aussi ajouté plusieurs niveaux de difficulté :
+                    <br>
+                    - Un niveau facile qui se base sur un algorithme glouton
+                    <br>
+                    - Un niveau moyen qui va chercher à bloquer l'adversaire (nous) et à gagner lorsqu'il peut
+                </p>
+
+                <p>
+                    Je me suis amusé à ajouter quelques animations natives Android pour plus de dynamisme.
+                </p>
+
+                <p>
+                    Enfin, j'ai utilisé la librairie Konfetti (DanielMartinus) pour une touche de fantaisie !
                 </p>
             </div>
         </div>
